[package]
name = "qkd_camera_streaming_client"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "qkd_camera_common_lib"
path = "src/common_lib/lib.rs"

[dependencies]
simple_image_interface = { git = "https://github.com/thomasarmel/simple-image-interface-rs.git" }
v4l = "0.14.0"
image = "0.24.7"
simplelog = "0.12.1"
show-image = "0.13.1"
turbojpeg = { version = "0.5.4", features = ["image"] }
rustls = { features = ["default"], git = "https://github.com/thomasarmel/rustls.git", branch = "qkd"}
#rustls = { version = "0.22.2", features = ["default"] }
#rustls = { path = "../rustls/rustls", features = ["default"] }
rustls-pki-types = "1.1.0"
rcgen = "0.12.0"
webpki-roots = "0.26.0"
pv_recorder = "1.2.1"
serde = {version = "1.0.195", features = ["derive"]}
postcard = {version = "1.0.8", features = ["alloc"]}
rodio = "0.17.3"
audio_overlay = "0.1.5"