[package]
name = "qkd_camera_streaming_client"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "qkd_camera_common_lib"
path = "src/common_lib/lib.rs"

[dependencies]
#simple_image_interface = { git = "https://github.com/thomasarmel/simple-image-interface-rs.git" }
#v4l = "0.14.0"
#camera_capture = "0.5.0"
#eye-hal = "0.2.0"
image = "0.24.9"
simplelog = "0.12.1"
show-image = "0.13.1"
turbojpeg = { version = "1.0.0", features = ["image"] }
rustls = { features = ["default"], git = "https://github.com/thomasarmel/rustls.git", branch = "qkd"}
#rustls = { version = "0.22.2", features = ["default"] }
#rustls = { path = "../rustls/rustls", features = ["default"] }
rustls-pki-types = "1.3.0"
rcgen = "0.12.1"
webpki-roots = "0.26.1"
pv_recorder = "1.2.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
postcard = {version = "1.0.8", features = ["alloc"]}
rodio = "0.17.3"
audio_overlay = "0.1.5"


[target.'cfg(unix)'.dependencies]
simple_image_interface = "0.1.6"
v4l = "0.14.0"

[target.'cfg(windows)'.dependencies]
nokhwa = { version = "0.10.4", features = ["input-native"] }